2.24
     2008-02-26
        * Allow for smith.name
        * Simplify some code in App.
        * Allow for post_navigate to get called even in case of error.
        * Added morph_base to App
        * Added validate_when_data hook.

2.23
     2007-12-20
        * Add the onevent load option - make sure validate_if figures into dependencies
        * Add was_valid, had_error, and was_checked validation options
        * Add vif_disable option.
        * Pass more information to clear/set hooks using named args

2.22
     2007-12-14
        * Allow for no errors with a username of "0"
        * Run hash_form hook before others so dump_history shows it in order of use
        * Fix Validate error with passing in the field name
        * Simplify and modernize validate.js
        * Add onevent: change, blur and submit types.
        * Add hooks and better overriding to valiate.js
        * Cleanup Validate.pm pod
        * Be sure Conf json read requires JSON

2.21
     2007-10-18
        * Add logout_hook to Auth
        * Remove key_payload
        * Only accept payload from cram styles
        * Added disable_simple_cram to enforce protecting server generated payloads

2.20
     2007-10-08
        * Added success_hook and failure_hook to Auth (not documented)
        * Fix precedence issue in conf reading in App (thanks to Krassimir Berov)
        * Fix bug in validate.js with LOCAL_PART matching (thanks to Thomas den Braber)
        * Add support for clear_on_error to validate.js (thanks to Thomas den Braber)

2.19
     2007-10-05
        * Make verify_token more granualar in Auth
        * Added parse_token method and/or property
        * Added verify_password method and/or property
        * Added verify_payload method and/or property
        * Fix filename based conf reading in App
        * Added check_valid_auth, handle_success, handle_failure
           key_loggedout, bounce_on_logout to Auth.

2.18
     2007-07-24